fixed menu error